--- a/styles/app.less
+++ b/styles/app.less
@@ -2,6 +2,7 @@
 
 @grey: #bbbaba;
 @red:rgb(163, 12, 12);
+@niagara: #0ca39e;
 
 * {
   box-sizing: border-box;
@@ -16,7 +17,7 @@ body {
 .content-container {
   display: flex;
   flex-direction: column;
-  // align-items: center;
+  align-items: center;
   // justify-content: center;
   min-height: 100vh;
 }
@@ -37,6 +38,7 @@ body {
   height: 20px;
   background: black;
 }
+
 .form-login-container {
     display: flex;
     flex-direction: column;
@@ -53,6 +55,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 10px;
+
   // background: rgb(163, 12, 12);
 
   &__title {
@@ -89,11 +92,69 @@ body {
     height: 35px;
     font-size: 16px;
     border-radius: 4px;
-    background: #0ca39e;
+    background: @niagara;
     cursor: pointer;
     color: white;
   }
 }
+
+.form-signup-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+
+  .form-signup {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    padding: 10px;
+
+    &__title {
+      margin-bottom: 14px;
+      font-size: 18px;
+      color: @niagara;
+      font-weight: bold;
+    }
+
+    &__item {
+
+
+      input {
+        // width: 252px;
+        width: 100%;
+        height: 35px;
+        margin-top: 5px;
+        margin-bottom: 14px;
+        outline: none;
+        border-radius: 4px;
+        border: solid black 1px;
+        padding-left: 7px;        
+      }
+
+      // .form-signup-avatar{
+      //   width: 100%;
+      //   border: none;
+      //   height: 20px;
+      // }
+
+      }
+    }
+    .btn-signup{
+      height: 35px;
+      font-size: 16px;
+      border-radius: 4px;
+      background: @niagara;
+      cursor: pointer;
+      color: white;
+    }
+
+  }
+
+
+}
+
 
 .games {
   max-width: 800px;
@@ -106,7 +167,7 @@ body {
 .games-list {
   display: grid;
   grid-template-columns: repeat(3, 30%);
-  grid-template-rows: repeat(3, 18em);
+  grid-template-rows: repeat(2, 18em);
   gap: 1em;
 
   
@@ -127,6 +188,65 @@ body {
     text-align: center;
     font-size: 18px;
   }
+}
+
+.game-info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  max-width: 800px;
+
+
+&__properties{
+  display: flex;
+
+  .properties__img {
+    text-align: center;
+    width: 400px;
+    padding: 0 40px;
+  }
+
+  .properties{
+    width: 400px;
+    padding-right: 40px;
+    padding-top: 20px;
+
+    &__title{
+      padding-bottom: 20px;
+      font-size: 20px;
+      font-weight: bold;
+
+    }
+
+    &__name{
+      margin-bottom: 15px;
+
+      .value {
+        padding-top: 5px;
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+&__description{
+  padding: 0 40px;
+  padding-bottom: 20px;
+
+  .description-title {
+    font-size: 20px;
+    padding: 10px 0;
+    font-weight: bold;
+
+  }
+
+  .description-content p{
+    margin-top: 10px;
+  }
+}
+
 }
 
 
