--- a/styles/app.css
+++ b/styles/app.css
@@ -321,7 +321,7 @@ body {
   margin-bottom: 15px;
 }
 .user-info-games {
-  max-width: 800px;
+  width: 650px;
   border: 1px solid black;
   margin-bottom: 30px;
 }
