--- a/styles/app.less
+++ b/styles/app.less
@@ -258,7 +258,7 @@ body {
   }
 
   .user-info-games {
-    max-width: 800px;
+    width: 650px;
     border: 1px solid black;
     margin-bottom: 30px;
 
