--- a/styles/app.css
+++ b/styles/app.css
@@ -333,6 +333,19 @@ body {
   padding: 10px;
   margin-bottom: 5px;
 }
+.meet {
+  width: 800px;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+.meet-list {
+  width: 600px;
+}
+.meet-list .meeting {
+  border: 1px solid black;
+  padding: 10px;
+  margin-bottom: 5px;
+}
 .button {
   border: none;
 }
