--- a/styles/app.less
+++ b/styles/app.less
@@ -274,6 +274,22 @@ body {
     }
   }
 
+  .meet {
+    width: 800px;
+    padding: 10px;
+    margin-bottom: 30px;
+  }
+
+  .meet-list {
+    width: 600px;
+    
+    .meeting{
+      border: 1px solid black;
+      padding: 10px;
+      margin-bottom: 5px;
+    }
+  }
+
 
 
 
