--- a/styles/app.less
+++ b/styles/app.less
@@ -36,8 +36,21 @@ body {
   justify-content: center;
   align-items: center;
   height: 20px;
-  background: black;
+  background: rgb(3, 48, 37);
 }
+
+input {
+  // width: 252px;
+  width: 100%;
+  height: 35px;
+  margin-top: 5px;
+  margin-bottom: 14px;
+  outline: none;
+  border-radius: 4px;
+  border: solid black 1px;
+  padding-left: 7px;        
+}
+
 
 .form-login-container {
     display: flex;
@@ -119,19 +132,19 @@ body {
       font-weight: bold;
     }
 
-    &__item {
-      input {
-        // width: 252px;
-        width: 100%;
-        height: 35px;
-        margin-top: 5px;
-        margin-bottom: 14px;
-        outline: none;
-        border-radius: 4px;
-        border: solid black 1px;
-        padding-left: 7px;        
-      }
-      }
+    // &__item {
+    //   input {
+    //     // width: 252px;
+    //     width: 100%;
+    //     height: 35px;
+    //     margin-top: 5px;
+    //     margin-bottom: 14px;
+    //     outline: none;
+    //     border-radius: 4px;
+    //     border: solid black 1px;
+    //     padding-left: 7px;        
+    //   }
+    //   }
     
     .btn-signup{
       height: 35px;
@@ -275,9 +288,25 @@ body {
   }
 
   .meet {
-    width: 800px;
+    width: 600px;
     padding: 10px;
     margin-bottom: 30px;
+
+    .meet-propertis {
+      margin-bottom: 20px;
+      padding: 0 60px;
+
+      &__title{
+        font-size: 18px;
+        font-weight: bold;
+      }
+      &__content {
+        margin: 5px;
+      }
+    }
+   .meet-propertis-btn{
+     text-align: center;
+   }
   }
 
   .meet-list {
@@ -298,6 +327,9 @@ body {
   border: none;
   
 }
+
+
+
 
 
 
