--- a/styles/app.css
+++ b/styles/app.css
@@ -120,6 +120,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+a:link {
+  color: white;
+}
 * {
   box-sizing: border-box;
   text-decoration: none;
@@ -153,11 +156,15 @@ input {
   width: 100%;
   height: 35px;
   margin-top: 5px;
-  margin-bottom: 14px;
   outline: none;
   border-radius: 4px;
   border: solid black 1px;
   padding-left: 7px;
+}
+input[type=radio] {
+  width: 37%;
+  height: 18px;
+  margin: 0;
 }
 .form-login-container {
   display: flex;
@@ -226,6 +233,9 @@ input {
   font-size: 18px;
   color: #0ca39e;
   font-weight: bold;
+}
+.form-signup-container .form-signup__item {
+  margin-bottom: 14px;
 }
 .form-signup-container .form-signup .btn-signup {
   height: 35px;
