--- a/styles/app.less
+++ b/styles/app.less
@@ -44,12 +44,18 @@ input {
   width: 100%;
   height: 35px;
   margin-top: 5px;
-  margin-bottom: 14px;
+//   margin-bottom: 14px;
   outline: none;
   border-radius: 4px;
   border: solid black 1px;
   padding-left: 7px;        
 }
+
+input[type=radio]{
+    width: 37%;
+    height: 18px;
+    margin: 0;
+} 
 
 
 .form-login-container {
@@ -132,19 +138,9 @@ input {
       font-weight: bold;
     }
 
-    // &__item {
-    //   input {
-    //     // width: 252px;
-    //     width: 100%;
-    //     height: 35px;
-    //     margin-top: 5px;
-    //     margin-bottom: 14px;
-    //     outline: none;
-    //     border-radius: 4px;
-    //     border: solid black 1px;
-    //     padding-left: 7px;        
-    //   }
-    //   }
+    &__item {
+        margin-bottom: 14px;
+      }
     
     .btn-signup{
       height: 35px;
@@ -327,9 +323,3 @@ input {
   border: none;
   
 }
-
-
-
-
-
-
