--- a/styles/app.less
+++ b/styles/app.less
@@ -1,6 +1,5 @@
 @import "reset";
 
-@grey: #bbbaba;
 @red:rgb(163, 12, 12);
 @niagara: #0ca39e;
 
@@ -18,7 +17,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  // justify-content: center;
   min-height: 100vh;
 }
 
@@ -40,11 +38,9 @@ body {
 }
 
 input {
-  // width: 252px;
   width: 100%;
   height: 35px;
   margin-top: 5px;
-//   margin-bottom: 14px;
   outline: none;
   border-radius: 4px;
   border: solid black 1px;
@@ -75,7 +71,6 @@ input[type=radio]{
   flex-direction: column;
   padding: 10px;
 
-  // background: rgb(163, 12, 12);
 
   &__title {
     margin-bottom: 14px;
@@ -164,8 +159,6 @@ input[type=radio]{
 .games-list {
   display: grid;
   grid-template-columns: repeat(3, 30%);
-  // grid-template-rows: repeat(2, 18em);
-  // gap: 1em;  
   justify-content: space-around;
 }
 
@@ -176,10 +169,14 @@ input[type=radio]{
   justify-content: center;
   align-items: center;
   padding: 15px;
-  border: 1px solid black;
+  cursor: pointer;
+
+  // border: 1px solid black;
 
   &__img {
     margin-bottom: 10px;
+    cursor: pointer;
+
   }
 
   &__title {
@@ -249,7 +246,7 @@ input[type=radio]{
     display: flex;
     justify-content: center;
     max-width: 800px;
-    border: 1px solid black;
+    // border: 1px solid black;
 
     &__img {
       text-align: center;
@@ -268,7 +265,7 @@ input[type=radio]{
 
   .user-info-games {
     width: 650px;
-    border: 1px solid black;
+    // border: 1px solid black;
     margin-bottom: 30px;
 
   }
@@ -314,10 +311,6 @@ input[type=radio]{
       margin-bottom: 5px;
     }
   }
-
-
-
-
 
 .button {
   border: none;
