feat: change view meetings list

--- a/styles/app.less
+++ b/styles/app.less
@@ -306,10 +306,22 @@ input[type=radio]{
     width: 600px;
     
     .meeting{
+      display: flex;
+      justify-content: space-between;
       border: 1px solid black;
       padding: 10px;
       margin-bottom: 5px;
+      cursor: pointer;
+
+
+      &__propertis{
+        display: flex;
+        width: 30%;
+        justify-content: space-between;
+    
+      }
     }
+
   }
 
 .button {
