--- a/styles/app.less
+++ b/styles/app.less
@@ -165,15 +165,15 @@ input[type=radio]{
 
 
 .game {
-  float: left;
+  // float: left;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 15px;
+  margin-bottom: 8px;
   cursor: pointer;
-
-  // border: 1px solid black;
+  border: 1px solid white;
 
   &__img {
     margin-bottom: 10px;
@@ -185,9 +185,14 @@ input[type=radio]{
     font-size: 18px;
   }
 }
+.gameList:hover{
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+
+}
 
 
-.game-info{
+.game-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -195,54 +200,91 @@ input[type=radio]{
   justify-content: center;
   max-width: 800px;
 
+  &__properties {
+    display: flex;
 
-&__properties{
-  display: flex;
-
-  .properties__img {
-    text-align: center;
-    width: 400px;
-    padding: 0 40px;
-  }
-
-  .properties{
-    width: 400px;
-    padding-right: 40px;
-    padding-top: 20px;
-
-    &__title{
-      padding-bottom: 20px;
-      font-size: 20px;
-      font-weight: bold;
-
+    .properties__img {
+      text-align: center;
+      width: 400px;
+      padding: 0 40px;
     }
 
-    &__name{
-      margin-bottom: 15px;
+    .properties {
+      width: 400px;
+      padding-right: 40px;
+      padding-top: 20px;
 
-      .value {
-        padding-top: 5px;
+      &__title {
+        padding-bottom: 20px;
+        font-size: 20px;
         font-weight: bold;
+      }
+
+      &__name {
+        margin-bottom: 15px;
+
+        .value {
+          padding-top: 5px;
+          font-weight: bold;
+        }
       }
     }
   }
-}
 
-&__description{
-  padding: 0 40px;
-  padding-bottom: 20px;
+  &__buttons {
+    display: flex;
+    width: 600px;
 
-  .description-title {
-    font-size: 20px;
-    padding: 10px 0;
-    font-weight: bold;
+    button {
+      width: 40%;
+      // height: 40px;
+      padding: 10px 30px;
+      font-size: 14px;
+      margin-right: 5px;
+      text-align: center;
+      border-radius: 4px;
+      outline: none;
+      cursor: pointer;
+
+    }
+
+    button[data-status=add],
+    .user-info-buttons__btn-createMeeting {
+      background-color: @niagara;
+      color: white;
+    }
+
+    button[data-status=add]:hover,
+    .user-info-buttons__btn-createMeeting:hover {
+      background-color: #15bdb8;
+    }
+
+    button[data-status=delete] {
+      background-color: @red;
+      color: white;
+    }
+    button[data-status=delete]:hover {
+      background-color: #bb1414;
+    }
+
   }
 
-  .description-content p{
-    margin-top: 10px;
+  &__description {
+    padding: 0 40px;
+    padding-bottom: 20px;
+
+    .description-title {
+      font-size: 20px;
+      padding: 10px 0;
+      font-weight: bold;
+    }
+
+    .description-content p{
+      margin-top: 10px;
+    }
   }
 }
-}
+
 
   .user-info{
     display: flex;
@@ -264,9 +306,6 @@ input[type=radio]{
           font-weight: bold;
         }
       }
-      // .user-info-meetigs {
-      //   margin-top: 25px;
-      // }
     }
 
     &__buttons{
@@ -310,25 +349,6 @@ input[type=radio]{
       // border: 1px solid #ccc;
       background-color: #f1f1f1;
 
-      button{
-        width: 35%;
-        height: 40px;
-        background-color: inherit;
-        border: solid #ccc;
-        border-width: 1px 1px 1px;
-      // border: 1px solid #ccc;
-        // border: none;
-        font-size: 16px;
-        outline: none;
-        cursor: pointer;
-        // padding: 14px 16px;
-        // transition: 0.3s;
-      }
-
-      button:hover {
-        background-color: #ddd;
-      }
-
       .active {     
          background-color: white;
          border-bottom: none;
@@ -351,11 +371,21 @@ input[type=radio]{
 
   .users-list {
     width: 600px;
+    
 
     .user{
-      border: 1px solid black;
+      border: 1px solid @niagara;
       padding: 10px;
       margin-bottom: 5px;
+      outline: none;
+      cursor: pointer;
+      border-left: 16px solid @niagara;
+      border-top: 3px solid @niagara ;
+    }
+
+    .user:hover{
+      background-color: @niagara;
+      color: white;
     }
   }
 
@@ -363,6 +393,7 @@ input[type=radio]{
     width: 600px;
     padding: 10px;
     margin-bottom: 30px;
+
 
     .meet-propertis {
       margin-bottom: 20px;
@@ -381,13 +412,48 @@ input[type=radio]{
    }
   }
 
+  .meet-list-buttons {
+    width: 600px;
+    text-align: center;
+    overflow: hidden;
+
+    .meet-list-actual{
+      width: 35%;
+      height: 40px;
+      background-color: white;
+      border: none;
+      font-size: 16px;
+      outline: none;
+      cursor: pointer;
+    }
+
+    .meet-list-closed{
+      width: 35%;
+      height: 40px;
+      background-color: white;
+      border: none;
+      font-size: 16px;
+      outline: none;
+      cursor: pointer;
+
+      margin-left: -5px;
+    }
+    .active {
+      // border: none;
+      font-size: 18px;
+      border-bottom: 6px solid @red;
+    }
+
+  }
+
   .meet-list {
     width: 600px;
+    padding: 10px;
     
     .meeting{
       display: flex;
       justify-content: space-between;
-      border: 1px solid black;
+      border: 1px solid @red;
       padding: 10px;
       margin-bottom: 5px;
       cursor: pointer;
@@ -401,11 +467,34 @@ input[type=radio]{
       }
     }
 
+    .meeting:hover{
+      background-color: @red;
+      color: white;
+    }
+
   }
 
-.button {
-  border: none;
-  
+button {
+  border: none;  
+}
+
+.btn-tab{
+  width: 35%;
+  height: 40px;
+  background-color: #ccc;
+  border: solid #ccc;
+  border-width: 1px 1px 1px;
+// border: 1px solid #ccc;
+  // border: none;
+  font-size: 16px;
+  outline: none;
+  cursor: pointer;
+  // padding: 14px 16px;
+  // transition: 0.3s;
+}
+
+.btn-tab:hover {
+  background-color: #ddd;
 }
 header > a {
   color: white;
