--- a/styles/app.less
+++ b/styles/app.less
@@ -1,6 +1,7 @@
 @import "reset";
 
-@red:rgb(163, 12, 12);
+// @red:rgb(163, 12, 12);
+@red:#A30C11;
 @niagara: #0ca39e;
 
 * {
@@ -10,7 +11,7 @@
 }
 
 body {
-  min-width: 700px;
+  min-width: 600px;
 }
 
 .content-container {
@@ -28,30 +29,91 @@ body {
   letter-spacing: -0.02em;
 }
 
-.header-container,
 .footer-container {
-  display: flex;
+  display: flex;  
   justify-content: center;
   align-items: center;
-  height: 20px;
-  background: rgb(3, 48, 37);
+  height: 30px;
+  background: @niagara;
 }
 
-input {
+.header-container{
+  background: @niagara;
+  height: 40px;
+  display: flex;  
+  justify-content: center; 
+
+  .header {
+    width: 800px;
+    display: flex;  
+    justify-content: space-around;
+    align-items: center;
+    font-size: 16px;
+
+    a {
+      color: white;
+    }
+
+    a:hover {
+      color: rgba(0, 0, 0, 0.699);
+    }
+
+    .header-links {
+
+      .header-links__link {
+        margin-right: 10px;
+      }
+  }
+
+  .header-user {
+    margin-left: 25px;
+    padding: 7px 7px;
+
+    &__img {
+      margin: 0 2px -7px 0;
+      margin-top: -5px;
+      }
+    }
+  }
+}
+
+
+
+
+
+input,
+textarea {
   width: 100%;
   height: 35px;
   margin-top: 5px;
   outline: none;
   border-radius: 4px;
-  border: solid black 1px;
-  padding-left: 7px;        
+  border: solid rgb(202, 198, 198) 1px;
+  padding-left: 7px;
+}
+textarea {
+  height: 80px;
+  padding-top: 8px; 
+  resize: none;
 }
 
-input[type=radio]{
+input[type=radio] {
     width: 37%;
     height: 18px;
     margin: 0;
 } 
+
+input[type=radio]:hover,
+input[type=radio]:focus {
+  box-shadow: none;
+}
+
+textarea:focus,
+textarea:hover,
+input:focus,
+input:hover { 
+  box-shadow: 0 1px 6px 0 rgba(91, 91, 94, 0.637);
+}
 
 
 .form-login-container {
@@ -443,17 +505,24 @@ input[type=radio]{
      .main:hover{
        background-color: #bb1414;;
      }
+     .main:disabled{
+      background-color: gray;
+      cursor: auto;
+     }
 
      .btn-join-meet,
-     .btn-save-meet {
+     .btn-save-meet,
+     .btn-create-meet {
         padding: 10px 30px;
         background-color: @niagara;
      }
      .btn-join-meet:hover,
-     .btn-save-meet:hover {
+     .btn-save-meet:hover,
+     .btn-create-meet:hover {
         background-color: #15bdb8;
      }
-     .btn-join-meet:disabled{
+     .btn-join-meet:disabled,
+     .btn-create-meet:disabled {
         background-color: gray;
         cursor: auto;
      }
@@ -534,16 +603,13 @@ button {
   border: none;  
 }
 
-button:disabled {
-  color: yellow;
-  background-color: black;
-}
+
 
 .btn-tab{
   width: 35%;
   height: 40px;
   background-color: #ccc;
-  border: solid #ccc;
+  border: solid rgb(184, 181, 181);
   border-width: 1px 1px 1px;
 // border: 1px solid #ccc;
   // border: none;
