feat: add new user from join

--- a/styles/app.css
+++ b/styles/app.css
@@ -146,6 +146,7 @@ body {
   align-items: center;
   height: 30px;
   background: #0ca39e;
+  color: white;
 }
 .header-container {
   background: #0ca39e;
