--- a/styles/app.less
+++ b/styles/app.less
@@ -65,7 +65,6 @@ body {
   }
 
   .header-user {
-    margin-left: 25px;
     padding: 7px 7px;
 
     &__img {
@@ -609,4 +608,286 @@ header > a {
 }
 a {
   color: black;
+}
+
+
+
+
+
+
+
+.error {
+  margin-top: 30px;
+  padding: 20px 40px;
+  font-size: 18px;
+  color: rgba(49, 47, 47, 0.822);
+
+  .main {
+    margin-bottom: 15px;
+    font-size: 26px;
+  }
+  
+  p {
+    margin-bottom: 5px;
+  }
+
+}
+
+@media screen and (max-width: 414px) {
+  body {
+    min-width: 414px;
+  }
+
+  .content-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .page-title {
+    display: none;
+  }
+
+  .header-container {
+    display: block;
+    height: 100%;
+
+    .header {
+      width: 100%;
+      display: block;
+      font-size: 1.5em;
+
+      .header-links__link {
+        width: 100%;
+        height: 2em;
+        display: block;
+        background-color: @niagara;
+        margin-right: 0;
+        padding: 10px;
+        border-bottom: 1px solid #e6dbdb66;
+      }
+    }
+    .header-user {
+      margin-left: 0;
+      a {
+        color: #83effb;
+      }
+      &__img {
+      display: none;
+      }
+    }
+  }
+
+  .footer-container {
+    padding: 30px 0;
+    height: 2em;
+  }
+
+.form-login-container {
+  display: block;
+  width: 100%;
+  margin-top: 40px;
+
+  .form-login {
+    display: block;
+    text-align: center;
+    padding: 20px;
+
+    &__title {
+      font-size: 2em;
+    }
+
+    .form-elem {
+      width: 100%;
+      height: 4em;
+    }
+
+    &__btn-login,
+    &__btn-registration {
+      width: 100%;
+      height: 3em;
+      font-size: 1.5em;
+    }
+  }
+}
+
+input,
+textarea {
+  height: 4em;
+}
+input[type=radio] {
+  width: 50%;
+  height: 30px;
+  margin: 0;
+} 
+
+
+.form-signup-container {
+  display: block;
+  width: 100%;
+
+  .form-signup {
+    display: block;
+    max-width: 100%;
+    padding: 40px;
+    font-size: 20px;
+
+    
+    &__title {
+      text-align: center;
+      font-size: 2em;
+    }
+    .btn-signup {
+      width: 100%;
+      height: 2em;
+      font-size: 1.2em;
+      margin-top: 30px;
+    }
+  }
+}
+
+.games {
+  max-width: 414px;
+}
+
+.games-list {
+  grid-template-columns: repeat(1, 100%);
+
+}
+
+.game-info {
+  display: block;
+  width: 100%;
+
+  &__properties {
+    display: block;
+
+    .properties {
+      width: 100%;
+      padding: 0 10px;
+
+      &__title {
+        text-align: center;
+        font-size: 1.5em;
+      }
+
+      &__name {
+        font-size: 1.5em;
+        padding: 0 10px;
+      }
+    }
+  }
+  &__buttons {
+    width: 100%;
+    padding: 0 20px;
+    
+    button {
+      padding: 5px 5px;
+    }
+
+    button[data-status=add],
+    button[data-status=delete],
+    .user-info-buttons__btn-createMeeting {
+      width: 100%;
+      height: 2.5em;
+      font-size: 1.2em;
+    }
+  }
+
+  .description-title {
+    text-align: center;
+    font-size: 1.5em;
+  }
+}
+
+
+.user-info {
+  display: block;
+  width: 100%;
+
+  &__about {
+    font-size: 1.3em;
+  }
+
+  &__buttons {
+    padding: 0 10px;
+    // height: 2em;
+    font-size: 1.2em;
+    margin-bottom: 20px;
+  }
+}
+
+.user-info-games {
+  width: 100%;
+
+  .btn-tab {
+    width: 100%;
+  }
+}
+
+.meet-list {
+  width: 100%;
+
+  .meeting {
+    display: block;
+
+    &__title {
+      margin-bottom: 20px;
+      font-size: 1.6em;
+    }
+
+    &__propertis {
+      font-size: 1.2em;
+    }
+  }
+}
+
+.meet-list-buttons {
+  width: 100%;
+
+  .meet-list-actual,
+  .meet-list-closed {
+    width: 50%;
+    height: 3em;
+    font-size: 1.2em;
+  }
+  
+  .active {
+    font-size: 1.5em;
+  }
+}
+
+.meet {
+  width: 100%;
+
+  .meet-propertis {
+    font-size: 1.5em;
+
+    &__title {
+      font-size: 1.2em;
+    }
+  }
+
+  .meet-propertis-btn {
+    text-align: center;
+  
+    .main,
+    .btn-join-meet {
+      width: 100%;
+      font-size: 1.2em;
+    } 
+  }
+}
+
+.users-list {
+  width: 100%;
+  margin-top: 30px;
+  padding: 10px;
+
+  .user {
+    width: 100%;
+    font-size: 1.5em;
+    border-left: 1px solid @niagara;
+
+  }
+}
 }
