--- a/styles/app.less
+++ b/styles/app.less
@@ -376,6 +376,10 @@ input:hover {
         cursor: pointer;
       }
 
+      .user-info-buttons__btn-cancelUserPage {
+        margin-bottom: 20px;
+      }
+
       .user-info-buttons__btn-saveUserPage,
       .user-info-buttons__btn-usersMeetings {
         text-align: center;
@@ -610,12 +614,6 @@ a {
   color: black;
 }
 
-
-
-
-
-
-
 .error {
   margin-top: 30px;
   padding: 20px 40px;
@@ -633,14 +631,19 @@ a {
 
 }
 
+
+
+
 @media screen and (max-width: 414px) {
   body {
     min-width: 414px;
   }
 
   .content-container {
+    display: block;
     width: 100%;
     height: 100%;
+    padding: 0 10px;
   }
 
   .page-title {
